<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_movies_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_russian">


    <ImageView
        android:id="@+id/aim"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_marginStart="16dp"
        android:src="@drawable/ic_precision"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/listTitle"
        app:layout_constraintTop_toTopOf="@id/listTitle"

        app:tint="@color/radical_red" />

    <TextView
        android:id="@+id/listTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="35dp"
        android:fontFamily="@font/roboto_black"
        android:text="@string/movies_list"
        android:textColor="@color/white"
        android:textSize="14sp"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/poster_color_image_view"
        app:layout_constraintStart_toStartOf="parent" />



    <ImageView
        android:id="@+id/card_background"
        android:layout_width="0dp"
        android:layout_height="296dp"

        android:src="@drawable/card_background"
        app:layout_constraintStart_toStartOf="@id/poster_color_image_view"
        app:layout_constraintEnd_toEndOf="@id/poster_color_image_view"
        app:layout_constraintTop_toTopOf="@id/poster_color_image_view" />

    <ImageView
        android:id="@+id/poster_color_image_view"
        android:layout_width="166dp"
        android:layout_height="248dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="27dp"
        android:padding="3dp"
        android:src="@drawable/avengers_poster_color"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/listTitle" />

    <ImageView
        android:id="@+id/posterGradientImageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/mask_for_fragment"

        app:layout_constraintBottom_toBottomOf="@id/poster_color_image_view"
        app:layout_constraintEnd_toEndOf="@id/poster_color_image_view"
        app:layout_constraintStart_toStartOf="@id/poster_color_image_view"
        app:layout_constraintTop_toTopOf="@id/poster_color_image_view"

        app:tintMode="screen" />

    <ImageView
        android:id="@+id/age_limit_rectangle"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/age_limit_rectangle"

        app:layout_constraintStart_toStartOf="@id/poster_color_image_view"
        app:layout_constraintTop_toTopOf="@id/poster_color_image_view" />

    <TextView
        android:id="@+id/audience_limit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_black"
        android:text="@string/avengers_audience"
        android:textColor="@color/whisper"
        android:textSize="12sp"

        app:layout_constraintBottom_toBottomOf="@id/age_limit_rectangle"
        app:layout_constraintEnd_toEndOf="@id/age_limit_rectangle"
        app:layout_constraintStart_toStartOf="@id/age_limit_rectangle"
        app:layout_constraintTop_toTopOf="@id/age_limit_rectangle" />

    <ImageView
        android:id="@+id/like"
        android:layout_width="16dp"
        android:layout_height="14dp"
        android:layout_marginEnd="6dp"
        android:src="@drawable/like"

        app:layout_constraintBottom_toBottomOf="@id/age_limit_rectangle"
        app:layout_constraintEnd_toEndOf="@id/poster_color_image_view"
        app:layout_constraintTop_toTopOf="@id/age_limit_rectangle" />

    <TextView
        android:id="@+id/genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="6dp"
        android:layout_marginBottom="22dp"

        android:fontFamily="@font/roboto_light"
        android:gravity="start"
        android:text="@string/avengers_genre"
        android:textColor="@color/radical_red"
        android:textSize="8sp"

        app:layout_constraintBottom_toBottomOf="@id/poster_color_image_view"
        app:layout_constraintStart_toStartOf="@id/poster_color_image_view" />

    <RatingBar
        android:id="@+id/rating_bar"
        style="@android:style/Widget.DeviceDefault.Light.RatingBar.Small"
        android:layout_width="81dp"
        android:layout_height="18dp"
        android:layout_marginStart="6dp"
        android:numStars="5"
        android:paddingTop="2dp"
        android:progressBackgroundTint="@color/white"
        android:progressTint="@color/radical_red"
        android:rating="@string/avengers_rating"
        android:scaleX=".7"
        android:scaleY=".7"
        android:secondaryProgressTint="@android:color/transparent"
        android:stepSize="1"
        android:transformPivotX="0dp"
        android:transformPivotY="0dp"

        app:layout_constraintStart_toStartOf="@id/poster_color_image_view"
        app:layout_constraintTop_toTopOf="@id/reviews"/>

    <TextView
        android:id="@+id/reviews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:paddingTop="1dp"


        android:fontFamily="@font/roboto_black"
        android:gravity="top"
        android:textAllCaps="true"
        android:text="@string/avengers_reviews"
        android:textColor="@color/light_grayish_navy"
        android:textSize="8sp"

        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="@id/poster_color_image_view"
        app:layout_constraintEnd_toEndOf="@id/poster_color_image_view"
        app:layout_constraintTop_toBottomOf="@id/genre" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier_under_first_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="poster_color_image_view" />
    <TextView
        android:id="@+id/film_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="16dp"

        android:fontFamily="@font/roboto_black"
        android:text="@string/avengers_end_game_in_one_line"
        android:textColor="@color/whisper"
        android:textSize="14sp"

        app:layout_constraintTop_toBottomOf="@id/barrier_under_first_row"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:id="@+id/duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:fontFamily="@font/roboto_black"
        android:textAllCaps="true"
        android:text="@string/avengers_duration"
        android:textColor="@color/smoky"
        android:textSize="8sp"

        app:layout_constraintStart_toStartOf="@id/film_name"
        app:layout_constraintTop_toBottomOf="@id/film_name" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="27dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/listTitle"
        >

    </androidx.recyclerview.widget.RecyclerView>



</androidx.constraintlayout.widget.ConstraintLayout>